[package]
name = "grnd"
version = "0.1.0"
authors = ["Matt Rochford <mattjohnrochford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
imageproc = "*"
itertools = "*"
anyhow = "*"
plotters = "^0.3.0"
